fix margins bug in search on mobile
uggh our grid is fucked — must refactor for clarity

--- a/src/css/search.less
+++ b/src/css/search.less
@@ -76,4 +76,11 @@ body.search {
     text-align: center;
     margin-bottom: @std-padding * 2;
   }
+
+  .no-results {
+    @media (max-width: @screen-xs-max) {
+      padding-left: @std-padding;
+      padding-right: @std-padding;
+    }
+  }
 }
